--- a/ICG_ECG_Demo_Data/readme.text
+++ b/ICG_ECG_Demo_Data/readme.text
@@ -1,4 +1,4 @@
-  This folder contains demo data for "Open source noise removal toolbox for ICG signal".
+  ##This folder contains demo data for "Open source noise removal toolbox for ICG signal".
   ECG_ICG_Data:  Recorded raw ECG_ICG signal under different conditions.
   Ensemble_Averaged_ECG_ICG:  Noise free ensmeble averaged ECG ICG data generated from ECG_ICG_Data using noise removal algorithm.
   Sample_Annoatations_by_ICMAA: Annotation of Noise free ensmeble averaged ECG ICG data in folder Ensemble_Averaged_ECG_ICG.
