--- a/ICG_ECG_Demo_Data/readme.text
+++ b/ICG_ECG_Demo_Data/readme.text
@@ -1,6 +1,6 @@
   **This folder contains demo data for "Open source noise removal toolbox for ICG signal".**
   
-  ECG_ICG_Data:  Recorded raw ECG_ICG signal under different conditions.
+  ECG_ICG_Data:  Recorded raw ECG_ICG signal in rest condition under different psychological conditions.
   
   Ensemble_Averaged_ECG_ICG:  Noise free ensmeble averaged ECG ICG data generated from ECG_ICG_Data using noise removal algorithm.
   
