--- a/ICG_ECG_Demo_Data/readme.text
+++ b/ICG_ECG_Demo_Data/readme.text
@@ -2,9 +2,9 @@
   
   ECG_ICG_Data:  Recorded raw ECG_ICG signal in rest condition under different psychological conditions.
   
-  Ensemble_Averaged_ECG_ICG:  Noise free ensmeble averaged ECG ICG data generated from ECG_ICG_Data using noise removal algorithm.
+  Ensemble_Averaged_ECG_ICG:  Noise free three stage ensmeble averaged (EA) ECG ICG data generated from ECG_ICG_Data using noise removal algorithm.
   
-  Sample_Annoatations_by_ICMAA: Annotation of Noise free ensmeble averaged ECG ICG data in folder Ensemble_Averaged_ECG_ICG.
+  Sample_Annoatations_by_ICMAA: Annotation of Noise free EA ECG ICG data from folder Ensemble_Averaged_ECG_ICG using ICMAA.
   
   Sample_Parameters_Extracted: Parameters extracted using EA ICG from "Ensemble_Averaged_ECG_ICG" and annotations from Sample_Annoatations_by_ICMAA.
  
